--- a/FoodieApplication/frontend/FoodieApplication/src/app/favService/get-all-fav/get-all-fav.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/favService/get-all-fav/get-all-fav.component.html
@@ -1,23 +1,25 @@
-<!-- 
-<mat-grid-list cols="1" rowHeight="6:1">
-  <mat-grid-tile>1</mat-grid-tile>
-  <mat-grid-tile>2</mat-grid-tile>
-  <mat-grid-tile>3</mat-grid-tile>
-  <mat-grid-tile>4</mat-grid-tile>
-</mat-grid-list>
+<!-- <div class="bg-image hover-overlay hover-zoom hover-shadow ripple">
+    <mdb-card *ngFor="let fav of favs">
+    <mdb-card-body>
+        <mdb-card-title>
+            <h4>{{ fav.restaurantName }}</h4>
+        </mdb-card-title>
+      </mdb-card-body>
+    </mdb-card>
+    </div> -->
 
 <div class="bg-image hover-overlay hover-zoom hover-shadow ripple">
-    <mat-card app-player matRipple class="card" *ngFor="let restuarent of data">
-       <a routerLink="dishList/{{restuarent.restaurantId}}">
-        {{restuarent.restaurantId}}
+    <mat-card app-player matRipple class="card" *ngFor="let fav of favs">
+      <div *ngFor="let rest of fav.restaurantList">
+       <a routerLink="dishList/{{rest.restaurantId}}">
+        {{rest.restaurantId}}
     <mat-card-content>
-    <div>{{ restuarent.restaurantName }}</div>
-    <h5>{{ restuarent.restaurantLocation }}</h5>
-    <div *ngFor="let image of restuarent.image">
-            <img mat-card-image [src]="image.image">
-        </div>
+    <div>{{ rest.restaurantName }}</div>
     </mat-card-content>
     </a>
-    <a routerLink="dishList01/{{restuarent.restaurantId}}"><mat-icon style="float: right;" onclick="remove(restuarent)">favorite</mat-icon></a>
+    </div>
+    <button mat-mini-fab >
+        <mat-icon style="float: right;" (click)="remove(fav)" >favorite</mat-icon>
+    </button>
     </mat-card>
-    </div> -->
+  </div>
