--- a/FoodieApplication/frontend/FoodieApplication/src/app/food-inventory/show-restaurant/show-restaurant.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/food-inventory/show-restaurant/show-restaurant.component.html
@@ -15,7 +15,9 @@
         </div>
     </mat-card-content>
     </a>
-    <a routerLink="dishList01/{{restuarent.restaurantId}}"></a>
-        <mat-icon style="float: right;"  (click)="add(restuarent)" >favorite</mat-icon>
+    <a routerLink="dishList/{{restuarent.restaurantId}}"></a>
+    <button mat-mini-fab >
+        <mat-icon style="float: right;" (click)="add(restuarent)" >favorite</mat-icon>
+        </button>
     </mat-card>
     </div>
