--- a/FoodieApplication/frontend/FoodieApplication/src/app/nav-bar/nav-bar.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/nav-bar/nav-bar.component.html
@@ -13,6 +13,7 @@
       <a mat-list-item routerLink="register">User Register</a>
       <a mat-list-item routerLink="profile">Profile</a>
       <a mat-list-item routerLink="showRest">Show Restaurant</a>
+      <a mat-list-item routerLink="getFav">Favourite</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content [ngStyle]="{'background': 'url(' + backgroundUrl + ') no-repeat 0 0 / cover'}">
