--- a/FoodieApplication/frontend/FoodieApplication/src/app/favService/get-fav-dish/get-fav-dish.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/favService/get-fav-dish/get-fav-dish.component.html
@@ -1,20 +1,42 @@
-<div class="bg-image hover-overlay hover-zoom hover-shadow ripple">
-    <mat-card app-player matRipple class="card" *ngFor="let fav of favs">
+<!-- <div class="bg-image hover-overlay hover-zoom hover-shadow ripple"> -->
+    <!-- <mat-card app-player matRipple class="card" *ngFor="let fav of favs">
         <div *ngFor="let rest of fav.restaurantList">
-            <mat-card-content>
-            <div>{{rest.restaurantId}}</div>
-            <div>{{ rest.restaurantName }}</div>
-            <div *ngFor="let dish of dishes">
-                <div>{{dish.dishName}}</div>
-                <div>{{dish.dishId}}</div>
-            <div *ngFor="let image of dish.image">
-                <img [src]="image.image">
-            </div>
-            </div>
-            </mat-card-content>
+                <mat-card-header>
+                    <div *ngFor="let dish of dishes">
+                    <mat-card-title>{{dish.dishName}}</mat-card-title>
+                    <mat-card-subtitle>{{dish.dishType}}</mat-card-subtitle>
+                    <mat-card-content>
+                    <div *ngFor="let image of dish.image">
+                        <img [src]="image.image">
+                    </div>
+                    </mat-card-content>
+                    <button mat-mini-fab >
+                        <mat-icon style="float: right;" (click)="remove(dish)" >favorite</mat-icon>
+                    </button>
+                    </div>
+                </mat-card-header>
         </div>
-        <button mat-mini-fab >
-            <mat-icon style="float: right;" (click)="remove(fav)" >favorite</mat-icon>
-        </button>
-    </mat-card>
+    </mat-card> -->
+
+    <div class="container">
+    <div class="row text-lg-left">
+        <div class="card2" *ngFor="let fav of favs">
+            <div *ngFor="let rest of fav.restaurantList">
+                <div *ngFor="let dish of rest.dishList">
+                <mat-card-header>
+                <div>{{dish.dishName}}</div>
+                <div>{{dish.dishType}}</div>
+                <mat-card-content>
+                <div *ngFor="let image of dish.image">
+                <img class="img-thumbnail" [src]="image.image">
+                </div>
+            </mat-card-content>
+            <button mat-mini-fab >
+                        <mat-icon style="float: right;" (click)="remove(dish)" >favorite</mat-icon>
+                    </button>
+            </mat-card-header>
+            </div>
+        </div>
+        </div>
+    </div>
 </div>
