--- a/FoodieApplication/frontend/FoodieApplication/src/app/favService/get-fav-dish/get-fav-dish.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/favService/get-fav-dish/get-fav-dish.component.html
@@ -2,7 +2,7 @@
     <!-- <mat-card app-player matRipple class="card" *ngFor="let fav of favs">
         <div *ngFor="let rest of fav.restaurantList">
                 <mat-card-header>
-                    <div *ngFor="let dish of dishes">
+                    <div *ngFor="let dish of rest.dishList">
                     <mat-card-title>{{dish.dishName}}</mat-card-title>
                     <mat-card-subtitle>{{dish.dishType}}</mat-card-subtitle>
                     <mat-card-content>
