--- a/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/view-restuarant/view-restuarant.component.css
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/view-restuarant/view-restuarant.component.css
@@ -1,6 +1,7 @@
     
 .table {
-    margin-top: 28rem !important;
-    margin-left: -25rem !important;
+    margin-top: 2rem !important;
+    margin-left: -1rem !important;
     align-content: center;
+    color: white;
 }
