--- a/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/view-dish/view-dish.component.css
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/view-dish/view-dish.component.css
@@ -1,13 +1,9 @@
     
 .table {
+    position: absolute;
     margin-top: 2rem !important;
-    margin-left: -1rem !important;
     align-content: center;
     color: white;
-}
-
-.container-fluid{
-  /* margin-left: 1%; */
 }
 
 .card {
