--- a/FoodieApplication/frontend/FoodieApplication/src/app/food-inventory/show-restaurant/show-restaurant.component.css
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/food-inventory/show-restaurant/show-restaurant.component.css
@@ -7,4 +7,14 @@
 
 .card img{
   height: 150px;
+  background: rgba(0, 0, 0, 0.12);
+}
+
+a {
+  text-decoration: none;
+  color: whitesmoke;
+}
+
+a:hover {
+  color: rgb(190, 32, 111);
 }
