--- a/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/view-restuarant/view-restuarant.component.css
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/view-restuarant/view-restuarant.component.css
@@ -1,7 +1,7 @@
     
 .table {
+    position: absolute;
     margin-top: 2rem !important;
-    margin-left: -1rem !important;
     align-content: center;
     color: white;
 }
