--- a/FoodieApplication/frontend/FoodieApplication/src/app/add-Restaurant-Service/send-restaurant/send-restaurant.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/add-Restaurant-Service/send-restaurant/send-restaurant.component.html
@@ -24,6 +24,13 @@
                 </mat-form-field>
             </div>
         </div>
+        <div formGroupName="image">
+            <div class="row">
+            <div class="col">
+                <input name="image" type="file" (change)="onFileSelected($event)">
+            </div>
+        </div>
+        </div>
 </mat-card-content>
     <mat-card-actions>
         <button type="submit" mat-raised-button color="primary" [disabled]="!addRestaurant.valid">send Restaurant</button>
