--- a/FoodieApplication/frontend/FoodieApplication/src/app/nav-bar/nav-bar.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/nav-bar/nav-bar.component.html
@@ -41,10 +41,10 @@
       <button mat-button color="accent"  class="search" routerLink="/search"><mat-icon>search</mat-icon>Search</button>
       <button mat-button color="accent"  class="search" routerLink="/rest">Send Restaurant</button>
       <button mat-button color="accent" routerLink="/dish">Send Dish</button>
-      <button mat-button color="accent" routerLink="addRest">Add Restaurant</button>
-      <button mat-button color="accent" routerLink="addDish">Add Dish</button>
-      <button mat-button color="accent" routerLink="restRequest">View Restaurant Request</button>
-      <button mat-button color="accent" routerLink="dishRequest">View Dish Request</button>
+      <button mat-button color="accent" routerLink="admin/addRest">Add Restaurant</button>
+      <button mat-button color="accent" routerLink="admin/addDish">Add Dish</button>
+      <button mat-button color="accent" routerLink="admin/restRequest">View Restaurant Request</button>
+      <button mat-button color="accent" routerLink="admin/dishRequest">View Dish Request</button>
       </div>
 
       <div style="margin-left:150px ;" > 
