--- a/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/view-restuarant/view-restuarant.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/view-restuarant/view-restuarant.component.html
@@ -4,6 +4,7 @@
         <tr>
           <th>Restaurant Id </th>
           <th>Restaurant Name</th>
+          <th>Restaurant Image</th>
           <th>Restaurant Location</th>
           <th>Status</th>
         </tr>
@@ -12,6 +13,10 @@
         <tr *ngFor="let restaurant of restaurant">
           <td>{{restaurant.restaurantId}}</td>
           <td>{{restaurant.restaurantName}}</td>
+          <div *ngFor= "let image of restaurant.image">
+            <td ><img [src]="image.image" width="fit-content" height="50px"></td>
+            <!-- <td *ngIf="dish.dishId==imgpath"><img [src]="imgpath" width="fit-content"></td> -->
+            </div>
           <td>{{restaurant.restaurantLocation}}</td>
           <td><button type="button" class="btn btn-danger" (click)="delete(restaurant.restaurantId)">Reject</button></td>
           <td><button type="button" class="btn btn-primary" (click)="Add(restaurant)">Approve</button></td>
