--- a/FoodieApplication/frontend/FoodieApplication/src/app/admin/admin-nav-bar/admin-nav-bar.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/admin/admin-nav-bar/admin-nav-bar.component.html
@@ -23,5 +23,27 @@
       <span>FoodieApplication</span>
     </mat-toolbar>
     <router-outlet></router-outlet>
+    <mat-card-footer>
+      <div style="margin-top:350px;padding-left: 30px;display:flex;">
+        <div style="margin-left: 30%;">
+          <p><b>FOR YOU</b></p>
+
+          <p>Site Terms</p>
+          <p>Privacy Policy And Your Policy Rights</p>
+          <p>State Disclosures</p> 
+      </div>
+
+      <div style="padding-right: 20%;">
+        <p><b>CONNECT WITH US</b></p>
+        <img class="img2" src="/assets/social-media-icons/facebook.png">
+        <img class="img2" src="/assets/social-media-icons/twitter.png">
+        <img class="img2" src="/assets/social-media-icons/instagram.png">
+        <img class="img2" src="/assets/social-media-icons/youtube.png">  
+    </div>
+  </div>
+
+<hr>
+    <p style="margin-left: 20px;text-align: center;">By continuing past this page, you agree to our Terms of Service, Cookie Policy, Privacy Policy and Content Policies.<br> All trademarks are properties of their respective owners. 2008-2022 © FoodieApplication™ Ltd. All rights reserved.</p>
+    </mat-card-footer>
   </mat-sidenav-content>
 </mat-sidenav-container>
