--- a/FoodieApplication/frontend/FoodieApplication/src/app/admin/admin-nav-bar/admin-nav-bar.component.css
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/admin/admin-nav-bar/admin-nav-bar.component.css
@@ -15,3 +15,11 @@
   top: 0;
   z-index: 1;
 }
+
+.img2{
+  padding-left: 0px;
+  height:50px;
+  object-fit: contain;
+  margin-left: 10px;
+  margin-top: 25px;
+}
