--- a/FoodieApplication/frontend/FoodieApplication/src/app/nav-bar/nav-bar.component.css
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/nav-bar/nav-bar.component.css
@@ -30,3 +30,11 @@
 .search{
   margin-left: 50px;
 }
+
+.img2{
+  padding-left: 0px;
+  height:50px;
+  object-fit: contain;
+  margin-left: 10px;
+  margin-top: 25px;
+}
