--- a/FoodieApplication/frontend/FoodieApplication/src/app/user-login/user-login.component.css
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/user-login/user-login.component.css
@@ -31,3 +31,13 @@ form{
 .col:last-child {
   margin-right: 0;
 }
+.example-radio-group {
+  display: flex;
+  flex-direction: column;
+  margin: 15px 0;
+  align-items: flex-start;
+}
+
+.example-radio-button {
+  margin: 5px;
+}
