--- a/FoodieApplication/frontend/FoodieApplication/src/app/nav-bar/nav-bar.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/nav-bar/nav-bar.component.html
@@ -11,7 +11,7 @@
     <mat-nav-list>
       <a *ngIf = "userIsAuthenticated || adminIsAuthenticated" mat-list-item routerLink="profile">Profile</a>
       <a mat-list-item routerLink="showRest">Show Restaurant</a>
-      <a mat-list-item routerLink="getFav">Favourite</a>
+      <a mat-list-item *ngIf = "!adminIsAuthenticated" routerLink="getFav">Favourite</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content [ngStyle]="{'background': 'url(' + backgroundUrl + ') no-repeat 0 0 / cover'}">
@@ -39,8 +39,8 @@
      
       <div style="display: flex;">
       <button mat-button color="accent"  class="search" routerLink="/search"><mat-icon>search</mat-icon>Search</button>
-      <button mat-button color="accent" *ngIf = "!userIsAuthenticated" class="search" routerLink="/rest">Send Restaurant</button>
-      <button mat-button color="accent" *ngIf = "!userIsAuthenticated" routerLink="/dish">Send Dish</button>
+      <button mat-button color="accent" *ngIf = "!userIsAuthenticated && !adminIsAuthenticated" class="search" routerLink="/rest">Send Restaurant</button>
+      <button mat-button color="accent" *ngIf = "!userIsAuthenticated && !adminIsAuthenticated" routerLink="/dish">Send Dish</button>
       <button mat-button color="accent" *ngIf = "adminIsAuthenticated" routerLink="admin/addRest">Add Restaurant</button>
       <button mat-button color="accent" *ngIf = "adminIsAuthenticated" routerLink="admin/addDish">Add Dish</button>
       <button mat-button color="accent" *ngIf = "adminIsAuthenticated" routerLink="admin/restRequest">View Restaurant Request</button>
