--- a/FoodieApplication/frontend/FoodieApplication/src/app/food-inventory/show-dish/show-dish.component.css
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/food-inventory/show-dish/show-dish.component.css
@@ -3,9 +3,11 @@
   height: 270px;
   display: inline-block;
   margin: 20px;
+  border-radius: 2px;
+  background: rgba(0, 0, 0, 0.437);
 }
 
-.card img{
+.card img {
   height: 150px;
   background: rgb(0 0 0 / 12%);
 }
