--- a/FoodieApplication/frontend/FoodieApplication/src/app/favService/get-all-fav/get-all-fav.component.css
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/favService/get-all-fav/get-all-fav.component.css
@@ -3,10 +3,12 @@
   height: 270px;
   display: inline-block;
   margin: 20px;
+  background: rgba(0, 0, 0, 0.437);
 }
 
 .card img {
   height: 150px;
+  margin-top: 5px;
   background: rgb(0 0 0 / 12%);
 }
 
