--- a/FoodieApplication/frontend/FoodieApplication/src/app/favService/get-fav-dish/get-fav-dish.component.css
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/favService/get-fav-dish/get-fav-dish.component.css
@@ -3,6 +3,8 @@
     height: 270px;
     display: inline-block;
     margin: 20px;
+    border-radius: 2px;
+    background: rgba(0, 0, 0, 0.437);
 }
 
 .card img {
