--- a/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/add-dish/add-dish.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/add-dish/add-dish.component.html
@@ -14,7 +14,7 @@
                 </mat-select>
                 <p>You selected {{ selected | json}}</p>
 
-                <!-- <div class="row">
+                <div class="row">
                     <div class="col">
                         <mat-form-field class="full-width">
                             <input matInput placeholder="Enter Dish Id" formControlName="dishId">
@@ -23,7 +23,7 @@
                             </mat-error>
                         </mat-form-field>
                     </div>
-                </div> -->
+                </div>
 
                 <div class="row">
                     <div class="col">
