--- a/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/add-rest/add-rest.component.html
+++ b/FoodieApplication/frontend/FoodieApplication/src/app/rest_management/add-rest/add-rest.component.html
@@ -5,7 +5,7 @@
                 <mat-card-title>Add Restaurant</mat-card-title>
             </mat-card-header>
             <mat-card-content>
-                <!-- <div class="row">
+                <div class="row">
                     <div class="col">
                         <mat-form-field class="full-width">
                             <input matInput placeholder="Enter Restaurant Id" formControlName="restaurantId">
@@ -14,7 +14,7 @@
                             </mat-error>
                         </mat-form-field>
                     </div>
-                </div> -->
+                </div>
                 <div class="row">
                     <div class="col">
                         <mat-form-field class="full-width">
